--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ instagram_username: allysonkatew
 google_plus_id:
 linkedin_username:
 angellist_username:
-medium_id:
+medium_id: allysonkate
 bitcoin_url:
 paypal_url:
 flattr_button:
