--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ medium_id: allysonkate
 bitcoin_url:
 paypal_url:
 flattr_button:
-dribbble_username: allysonkate
+dribbble_username: 
 medium_id: allysonkate
 
 # Post sharing icons
