--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       allyson kate
 email:       allysonkatew@gmail.com
 author:      Allyson Wakeman
-description: "Allyson Wakeman's Website Online"
+description: "Allyson Wakeman's Website"
 baseurl:     ""
 url:         "https://allysonkate.github.io/"
 date_format: "%Y"
