--- a/_config.yml
+++ b/_config.yml
@@ -29,15 +29,15 @@ github_username: allysonkate
 bitbucket_username:
 stackoverflow_id:
 twitter_username: allysonkate
-instagram_username: allysonkatew
+instagram_username: allyson_wake
 google_plus_id:
-linkedin_username:
+linkedin_username: allysonkate
 angellist_username:
 medium_id: allysonkate
 bitcoin_url:
 paypal_url:
 flattr_button:
-dribbble_username: 
+dribbble_username:
 medium_id: allysonkate
 
 # Post sharing icons
